guestbook/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook
  labels:
    name: guestbook
    istio-injection: enabled
