guestbook/ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: guestbook
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - test.internal
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook
spec:
  hosts:
    - test.internal
  gateways:
    - guestbook
  http:
    - match:
        - uri:
            prefix: /guestbook/
        - uri:
            exact: /guestbook
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: guestbook
